plugins {
	id 'java'
	id "io.github.liplum.mgpp" version "1.2.0"
}

targetCompatibility = 11
sourceCompatibility = 11

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.loader=ALL-UNNAMED")
	options.compilerArgs.addAll("--add-exports", "java.base/jdk.internal.reflect=ALL-UNNAMED")

//	options.compilerArgs.addAll(['--release', '11'])
//	options.compilerArgs.addAll("--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED")
}

tasks.withType(JavaCompile) {
	options.fork = true
	options.forkOptions.jvmArgs.addAll([
			"--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
			"--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
			"--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
			"--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
			"--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
			"--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
	])
}

group 'org.example'
version '1.0'
sourceSets {
	main {
		java.srcDirs = ["src"]
	}
}
repositories {
	mavenCentral()
	mindustryRepo()
}
def MdtDataDir = "E:/Users/ASUS/Desktop/Mindustry136"
def VERSION = "1.4.3.1"
def uncVersion = "1.7.4"

dependencies {
	annotationProcessor "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"

	compileOnly files(
//			"E:/Users/ASUS/Desktop/Mindustry136/mods/StructureOrderedDesktop.jar",
//			"F:/files/mindustry/a/mdt-ac-1.0.jar",
			"_libs/Mindustry_android.jar",
//			"${MdtDataDir}/Mindustry_desktop.jar",
			"assets/libs/reflect-core.jar",
			"assets/libs/procyon-0.6.jar",
	)
	implementation files(
			"z_backfile/javassist.jar",
			"_libs/Android_dalvik-1.0.jar",
			"_libs/AndroidField.jar",
	)
	def mindustryVersion = 'v145.1'
	compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
	compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
//	importMindustry()
}
mindustry {
	dependency {}
	client {}
	meta << ModMeta(
			version: VERSION
	)
	meta.displayName = "mod-tools"
	def name = project.archivesBaseName
	deploy {
		baseName = name
	}
	dexJar {
		options.minApi = '31'
	}
}
mindustryAssets {
	// Set the assets root
	rootAt "$projectDir/assets"
}
test {
	useJUnitPlatform()
}

import arc.files.Fi
import arc.util.Log;

task playGame(dependsOn: classes, type: JavaExec) {
	dependsOn jar

	doFirst {
		Log.info("$buildDir")
		/* 复制文件到mods目录 */
		def modFi = project.archivesBaseName + "-" + VERSION + ".jar"
		def buildDir = new Fi("" + buildDir).child("libs")
		def from = buildDir.child(project.archivesBaseName + "-1.0.jar");
		if (from.exists()) from.copyTo(buildDir.child(modFi))
		buildDir.child(modFi).copyTo(new Fi(MdtDataDir).child("mods").child(modFi))
	}
	//运行游戏目录
	main = "-jar"
	args = [
			MdtDataDir + "/Mindustry.jar",
//"E:/应用/Mindustry/jre/desktop.jar"
//			"-antialias"
//			, "-debug"
	]
}
task ZComplieAll {
	dependsOn deploy
}

task mergeLibs(type: Jar) {
	archiveFileName = "$rootDir/assets/libs/reflect-core.jar"

	def libsDir = new File("$rootDir/libs/build/libs")

	from(zipTree("$libsDir/libs-desktop.jar")) {
		exclude "classes.dex"
//		exclude "mod.hjson"
		exclude "META-INF/META-INF.MF"
	}
	from(zipTree("$libsDir/libs-dx.jar")) {
		include "**"
	}
}

task playAndroid {
	dependsOn deploy
//    System.out.println("${project.archivesBaseName}-${VERSION}.jar");
//    throw  new RuntimeException()
	def MDT_ANDROID_DIR = "/sdcard/Android/data/io.anuke.mindustry/files";
	def adb = "F:/files/java/sdk/platform-tools/adb";
	doLast {
		("$adb push ${buildDir}/tmp/deploy/${project.archivesBaseName}-${VERSION}.jar"
				+ " $MDT_ANDROID_DIR/mods/")
				.execute().waitForProcessOutput(System.out, System.err)
		"$adb shell am force-stop io.anuke.mindustry"
				.execute().waitForProcessOutput(System.out, System.err)

		"$adb shell am start -n io.anuke.mindustry/mindustry.android.AndroidLauncher -D -W "
				.execute().waitForProcessOutput(System.out, System.err)

		def MindustryLogPath = "${MDT_ANDROID_DIR}/last_log.txt"
		new Fi("${project.rootDir}\\appendLog.sh")
				.writeString("""
#!/bin/sh
# MADE By BING
# 获取文件的初始修改时间
old_time=-1
# 循环检查文件的修改时间
while true; do
  # 获取文件的当前修改时间
  new_time=\$(stat -c %y ${MindustryLogPath})
  # 如果修改时间发生变化
  if [ "\$new_time" != "\$old_time" ]; then
    # 将文件的内容追加到控制台
    tail -f ${MindustryLogPath}
    # 更新修改时间
    old_time=\$new_time
  fi
  # 等待一段时间（秒）
  sleep 0.05
done""")
		"$adb push ${project.rootDir}\\appendLog.sh ${MDT_ANDROID_DIR}/appendLog.sh"
				.execute().waitForProcessOutput(System.out, System.err)
		"$adb shell am start -n io.anuke.mindustry/mindustry.android.AndroidLauncher -D -W "
				.execute().waitForProcessOutput(System.out, System.err)
		"$adb shell sh ${MDT_ANDROID_DIR}/appendLog.sh"
				.execute().waitForProcessOutput(System.out, System.err)
	}
}


//build.dependsOn(mergeLibs)
